attempt url bar fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a:hover {
 }
 
 .content-section {
-    min-height: 100vh;
+    min-height: 100%;
     padding-top: 25px;
 }
 
